# wwbda

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/: copilot-instructions.md
bot/: Cargo.toml
bot/src/: main.rs
bot/src/command/: changelog.rs  mod.rs  reboot.rs  shogi.rs
bot/src/error/: mod.rs
bot/src/event/: mod.rs
bot/src/log/: mod.rs
bot/src/util/: discord.rs  mod.rs  time.rs
libshogi/: Cargo.toml
libshogi/migrations/2026-02-28-105743-0000_create_initial_schema/: down.sql  up.sql
libshogi/src/: img.rs  lib.rs  ref.py  test.rs  ws.rs
libshogi/src/persistence/: mod.rs  models.rs  schema.rs
