[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
ctrlc = "3.5.1"
diesel = { version = "2.3.6", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
fern = { version = "0.7.1", features = ["colored"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
log = "0.4.29"
poise = "0.6.1"
r2d2 = "0.8.10"
regex = "1.12.2"
semver = "1.0.27"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
libshogi = { path = "../libshogi" }
