[package]
name = "bot"
version = "0.3.1"
edition = "2024"

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
ctrlc = "3.5.1"
dotenvy = "0.15.7"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.29"
poise = "0.6.1"
regex = "1.12.2"
semver = "1.0.27"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
libshogi = { path = "../libshogi" }
