[package]
name = "libshogi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
rand = "0.8"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
