[package]
name = "libshogi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
futures = "0.3"
rand = "0.10.0"
http = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
diesel = { version = "2.3.6", features = [
  "chrono",
  "r2d2",
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.3.1"
r2d2 = "0.8.10"
chrono = "0.4.44"
